--- a/Newtasks/nav.css
+++ b/Newtasks/nav.css
@@ -27,14 +27,14 @@ nav ul li {
 	line-height: 80px;
 	margin: 0 5px;
 }
-nav ul li .a {
+nav ul li a {
 	color: white;
 	font-size: 17px;
 	padding: 7px 13px;
 	border-radius: 3px;
 	text-transform: uppercase;
 }
-.a.active, .a:hover {
+a.active, a:hover {
 	background: #1d075f;
 	transition: .5s;
 }
@@ -78,10 +78,10 @@ nav ul li .a {
 		margin: 50px 0;
 		line-height: 30px;
 	}
-	nav ul li .a {
+	nav ul li a {
 		font-size: 20px;
 	}
-	.a:hover, .a.active {
+	a:hover, a.active {
 		background: none;
 		color: #5434af;
 	}
