--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -7,7 +7,7 @@
 body{
     background-color: rgb(5, 0, 14);
     padding: 0px 0;
-    background: linear-gradient(to bottom, #68e6ea 20%, #6102fa 100%);
+    background: #3d91c9 12%;
 }
 
 .calculator {
