--- a/Newtasks/newtask.css
+++ b/Newtasks/newtask.css
@@ -12,7 +12,7 @@
 body{
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, #68e6ea 20%, #6102fa 100%);
+  background: #3d91c9 12%;
 }
 .wrapper{
   background: #fff;
